--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
 
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
       <div class="style-guard">
-        <img src="images/image-qr-code.png" alt="qr-code-img">
+        <img src="image-qr-code.png" alt="qr-code-img">
         <p class="sen-1">Improve your front-end skills by building projects</p>
         <p class="sen-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
